--- a/assets/checkout.scss
+++ b/assets/checkout.scss
@@ -120,6 +120,10 @@ body, #info-bar, #addresses, #email, #buttons, #overview, #main  {
   padding: 50px 0px 30px
 }
 
+#header h1 {
+  display: none;
+}
+
 #footer {
   margin-bottom: -20px;
 }
@@ -247,8 +251,8 @@ body {
 
 #thumbs h3 {
   font-size: 1rem;
-  font-weight: 700;
   letter-spacing: 0.1em;
+  font-weight: 700;
   text-transform: uppercase;
   color: black;
   padding: 0 0 0 5.25rem;
