--- a/snippets/product-main.liquid
+++ b/snippets/product-main.liquid
@@ -57,10 +57,9 @@
       <p>This product is not available</p>
     {% endif %}
 
-    <p>{{ product.description }}</p>
     <ul>
-      <li>Nullam id dolor id nibh ultricies vehicula ut id elit</li>
-      <li>Nullam quis risus eget urna mollis ornare vel eu leo</li>
+      <li>{{ product.description }}</li>
+      <li>Nullam quis risus eget urna mollis ornare</li>
       <li>Vestibulum id ligula porta felis euismod semper</li>
     </ul>
    </aside>
