--- a/snippets/product-main.liquid
+++ b/snippets/product-main.liquid
@@ -57,11 +57,7 @@
       <p>This product is not available</p>
     {% endif %}
 
-    <ul>
-      <li>{{ product.description }}</li>
-      <li>Nullam quis risus eget urna mollis ornare</li>
-      <li>Vestibulum id ligula porta felis euismod semper</li>
-    </ul>
+    <ul>{{ product.description }}</ul>
    </aside>
 
   </article>
