--- a/assets/checkout.css
+++ b/assets/checkout.css
@@ -114,18 +114,31 @@ body, #info-bar, #addresses, #email, #buttons, #overview, #main  {
   width: auto;
 }
 
-#header, #footer {
-  background-image: none;
-  padding: 50px 0px 30px
+#header {
+  padding: 4em 0;
 }
 
-#footer {
-  margin-bottom: -20px;
+#header, #footer {
+  background-image: none;
 }
+
+
+#footer {
+  background: white url(http://cdn.shopify.com/s/files/1/0251/7377/t/1/assets/xlogo.png?10872) no-repeat center 4.5em;
+  background-size: 16px 16px;
+  color: #acadb0;
+  font-size: 100%;
+  padding: 2em 0 6em;
+  -webkit-font-smoothing: antialiased;
+}
+
+
 
 #footer p {
   text-transform: uppercase;
   letter-spacing: 0.1em;
+  font-size: 0.7em;
+  font-weight: 300;
 }
 
 #cancel-purchase {
@@ -191,13 +204,13 @@ body {
 
 #info-bar {
   display: block;
-  font-size: 0.75rem;
+  font-size: 0.7rem;
   letter-spacing: 0.2em;
-  padding: 0.5em 1em;
+  padding: 0.35em 1em;
   color: white;
   text-transform: uppercase;
   background: black;
-  font-weight: 500;
+  font-weight: 300;
   width: 100%;
   position: static;
   top: 0;
@@ -230,13 +243,14 @@ body {
 }
 
 #thumbs {
-  margin: 1.5em 0 0 0;
+  margin: 0 0 0 0;
 }
 
 #thumbs td {
+  display: block;
   font-size: 100%;
   width: 100%;
-  padding-bottom: 1.25em;
+  padding: 1.25em 0;
   border-bottom: 1px solid rgba(229,229,229,1);
 }
 
@@ -312,13 +326,13 @@ body {
 }
 
 #overview .hint {
-  font-size: 0.875em;
+  font-size: 0.75em;
   color: #acadb0;
   text-transform: uppercase;
   font-weight: 300;
   letter-spacing: 0.1em;
   font-style: normal;
-  line-height:1em;
+  line-height:2em;
 }
 
 #tax_span:after {
@@ -348,8 +362,9 @@ font-size: 0.875em;
 }
 
 #email label {
-  font-size: 0.875em;
+  font-size: 0.75em;
   text-indent: -9999px;
+  margin: 0 0 0.5rem 0;
 }
 
 #email label:after {
@@ -367,7 +382,7 @@ font-size: 0.875em;
 }
 
 label, #steps {
-  font-size: 0.875em;
+  font-size: 0.75em;
   margin-top: -0.3rem;
   color: #acadb0;
   text-transform: uppercase;
@@ -396,9 +411,8 @@ label, #steps {
 #payment p, #payment-method p {
    font-size: 0.875em;
   color: #acadb0;
-  text-transform: uppercase;
   font-weight: 300;
-  letter-spacing: 0.1em;
+  line-height: 1.6em;
   display: block;
 }
 
@@ -614,6 +628,7 @@ span.hint a:hover {
 #marketing-box label {
   display: block;
   position: absolute;
+  font-weight: 300 !important;
   top: 0;
   left: 25px;
   width: 94%;
