--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -72,26 +72,22 @@ $(function() {
   <article>
   <aside class="third">
     <h3>Mission</h3>
-     <p>Ten thousand hours or ten thousand miles, we are dedicated to the pursuit of excellence.</p>
+     <p>A quiet revolution is afoot. It is the recognition that a life without challenge is a life without purpose. A movement of do-ers, not be-ers; driven by the desire for conquest over fear.</p>
      <a href="pages/mission/" class="btn">Learn More</a>
   </aside>
 
   <aside class="third">
     <h3>Products</h3>
     <figure>
-      <a href="collections/all/">{{ 'shorts.png' | asset_url | img_tag }}</a>
+      <a href="collections/all/">{{ 'products_index.jpg' | asset_url | img_tag }}</a>
   </figure>
   </aside>
 
   <aside class="third">
     <h3>Gear Refresh</h3>
-    <h2>
-      Our Guarantee
-      </h2>
-    <p>Each Ten Thousand product is guaranteed for life.
+    <p>We build products to be used and pushed to the limits. When your gear gets to that point of needing to be replaced, let us know and we'll hook you up.
     </p>
     <a href="pages/gear-refresh" class="btn">Learn More</a>
   </aside>
-  <div class="clear"></div>
   </article>
 </section>
