--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <link rel="shortcut icon" href="{{ 'touch-icon-iphone.png' | asset_url }}">
+  <link rel="apple-touch-icon" href="{{ 'touch-icon-iphone.png' | asset_url }}" /> 
+  <link rel="apple-touch-icon" sizes="{{ 'touch-icon-ipad.png' | asset_url }}" /> 
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ 'touch-icon-iphone-retina.png' | asset_url }}" />
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ 'touch-icon-ipad-retina.png' | asset_url }}" />
 
   {% if template == 'index' %}
   <title>{{ shop.name }} | {{ page_title }}</title>
@@ -45,8 +50,6 @@
 
   {{ '//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js' | script_tag }}
   {{ 'jquery.flexslider-min.js' | asset_url | script_tag }}
-   {{ 'jquery.waypoints-min.js' | asset_url | script_tag }}
-   {{ 'jquery.masonry.js' | asset_url | script_tag }}
 
   <!-- TypeKit-->
   <script type="text/javascript" src="//use.typekit.net/qcv7rrn.js"></script>
